<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="multico.in.btctrage.SettingsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/api_public_key"
            android:layout_margin="12dp"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="0dp"
                android:id="@+id/set_pub"
                android:layout_weight="1"
                android:hint="@string/enter_or_scan_from_qr"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="40sp"
                android:src="@android:drawable/ic_menu_camera"
                android:onClick="scanPubKey"
                android:layout_height="40sp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/api_private_key"
            android:layout_margin="12dp"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="0dp"
                android:id="@+id/set_priv"
                android:layout_weight="1"
                android:hint="@string/enter_or_scan_from_qr"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="40sp"
                android:src="@android:drawable/ic_menu_camera"
                android:onClick="scanPrivKey"
                android:layout_height="40sp" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:text="@string/btn_continue"
        android:onClick="doContinue"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content" />

</RelativeLayout>
