<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="multico.in.btctrade.CreateOrderActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="24dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textSize="22sp"
                android:id="@+id/ord_title"
                android:text="Buy bitcoins"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="12dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="Price: "
                android:width="100sp"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="wrap_content"
                android:gravity="center"
                android:hint="20000.00"
                android:inputType="numberDecimal"
                android:id="@+id/ord_price"
                android:layout_weight="2"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:text="UAH / BTC"
                android:width="70sp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="12dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/amount"
                android:width="100sp"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="wrap_content"
                android:hint="0.01"
                android:inputType="numberDecimal"
                android:id="@+id/ord_amt"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:text="BTC"
                android:width="70sp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="12dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/equivalent"
                android:width="100sp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/ord_eqv"
                android:layout_weight="2"
                android:text="..."
                android:gravity="center"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:text="UAH"
                android:width="70sp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="12dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/available"
                android:width="100sp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="0dp"
                android:id="@+id/ord_ava"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:text="UAH"
                android:width="70sp"
                android:id="@+id/ord_ava_ccy"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ProgressBar
            android:layout_width="match_parent"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="true"
            android:id="@+id/progress"
            android:visibility="gone"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:padding="12dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:text="Buy"
            android:onClick="placeOrder"
            android:id="@+id/ord_do"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
